Primeira parte concluida - erros resolvidos

--- a/projeto/pom.xml
+++ b/projeto/pom.xml
@@ -62,6 +62,11 @@
 			<version>1.18.34</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.markkDev</groupId>
+			<artifactId>rest-with-spring-boot</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
